--- a/index.css
+++ b/index.css
@@ -1,65 +1,50 @@
 body{
-    margin:0;
-   
     position: relative;
 }
 /* box-sizing */
 *{
     box-sizing: border-box;
 }
-#intro-section,
+/* margin: 0 */
+body, .intro-part{
+    margin:0;
+}
+
+header,
 .content-part,
 body,
 #menu-part,.item-container{
     max-width:100vw;
 }
-
-
-.item-plus{
- 
+.item-plus,#complete-button{
     justify-content: center;
 }
-
 
 .emoji-name{
     width: 30%;
 }
-.emoji-name h2{
+.emoji-name h2,.item-details h2{
     font-size: 1.3rem ;
 }
 .item-plus{
     width: 15%;
 }
-
-.item-details{
-    
+.item-details{ 
     width:55%
 }
-.item-details h2{
-    font-size:1.2rem ;
-    
-    
-}
-.item-details h3{
-    font-size: 1.3rem;
-    
+/* padding: 1em  */
+.item-details h2,.intro-part{
     padding: 1em; 
-    /* border:#38b000 solid 3px; */
 }
 .item-details,.order-second{
-    justify-content: space-between;
-   
-    
+    justify-content: space-between; 
 }
-#intro-section{
+header{
     height:15vh;
     align-items: start;
-    
 }
 .intro-part{
     height:100%;
-    margin:0;
-    padding: 1em;
 }
 /* flex display and directions */
 body,
@@ -70,101 +55,89 @@ body,
 #menu-part,
 .item-container,
 .item-details,
-.item-plus{
+.item-plus,
+#total-sec,
+header{
     display: flex;
     
 }
 body,
-#intro-section,
+header,
 #order-part,
 #form-sec,
 #order-form,
-#thank-sec,#menu-part{
+#thank-sec,#menu-part,
+#total-sec{
     flex-direction: column;
 }
 .order,.item-container,.item-details{
     flex-direction: row;
 }
-
 /*  Align items part*/
-header,
+
 #order-form,
 #thank-sec,
 .item-details,
 .item-plus,
-.item-container{
+.item-container,.order{
     align-items: center;
 }
-
-
 /* margin auto */
 
 #form-sec,#order-form,#thank-sec{
     margin: auto;
 }
 
-#intro-section{
+header{
     background-image: url(images/cover.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color:aliceblue;
-    
-                     
-    
 }
-
 /* width */
-#order-form,#order-form input{
+#form-sec{
     width:90vw;
-;
 }
 header{
    font-size: 1.010rem;   
     text-shadow: 0 0 0.55em black;
 }
-
-
 #sub-head,#main-title{
-    /* font-size:1.4em;  */
     margin: 0.1em 0;
-    
-     
 }
 
-
 span{
-    font-size: 3rem; 
+    font-size: 3rem;
     
 }
 .fa-solid{
     font-size: 2rem; /*24px*/
     
 }
+#complete-button{
+width:90%;
+align-self: center;
+}
 
 .green-back{
     background: #38b000;
     color:whitesmoke;
     font-weight: bold;
-    height: 40px;
+    font-size: 1.2rem;
+    padding: 0.5em 0;
 }
-
-
-
 
 .delete-button{
     border:none;
-    margin: auto auto auto 0.625em;/* 10px */
     height:10px;
 }
 
 #form-sec{
-    width:300px;
-    height:280px;  
+    height:45vh;  
 }
 
-
 #order-form{
-    width:90%;
+    width: 90%;
     gap:10px;
 }
 #form-sec h2{
@@ -172,6 +145,7 @@ span{
 }
 #order-form input{
     border: gray solid 0.125em;
+    width: 100%;
     padding: 0.25em 0.3125em; /* 4px 5px */
    
 }
@@ -187,25 +161,59 @@ span{
     border:black solid 2px;
 }
 #thank-sec{
-    width:20%;
-    height:30%;
-    
-    
+    width:65vw;
+    height:30vh;
 }
 .order,.order-second{
     width: 50%;
 }
+.order{
+    gap: 0.5em;
+}
+
+.total-sec{
+    margin-left:1em ;
+}
+
 #order-part{
-    margin-top: 1em;
+    margin: 0.5em 1em;
 }
 
 #order-part .item-container{
-    gap:1em;
-    margin-right: 0.5em;
-    
+    gap:1em;  
 }
-
+#thank-you-part{
+    height: 90%;
+    font-size: 1.5rem;
+}
 /* text align */
 #thank-sec,#form-sec,.emoji-name{
     text-align: center;
+}
+
+/* Pc */
+
+@media(min-width:600px){
+
+#menu-part{
+    display:grid;
+    grid-template-columns: repeat(2,minmax(45%,1fr));
+}
+#order-part{
+    width: 50%;
+    margin:1em auto;
+}
+.item-container{
+    margin-right: 0.5em;
+}
+header{
+    align-items: center;
+}
+#form-sec, #thank-sec{
+    width:45vw;
+}
+.exit-button{
+    font-size: 1.2rem;
+}
+
 }
